--- a/src/TourOfHeroes.Web/Pages/_Host.cshtml
+++ b/src/TourOfHeroes.Web/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/"
+@page "/"
 @namespace TourOfHeroes.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -14,8 +14,7 @@
 </head>
 <body>
     <app>
-        @* Remove the following line of code to disable prerendering *@
-        @(await Html.RenderStaticComponentAsync<App>())
+        @(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))
     </app>
 
     <script src="_framework/blazor.server.js"></script>
