Add the form for adding a new hero

--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -8,3 +8,4 @@
 @using TourOfHeroes.Web
 @using TourOfHeroes.Web.Shared
 @using TourOfHeroes.Web.Components.Counter
+@using TourOfHeroes.Web.Components.Heroes
