Add validation to the imports

--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.JSInterop
 @using TourOfHeroes.Web
 @using TourOfHeroes.Web.Shared
+@using TourOfHeroes.Web.Validation
 @using TourOfHeroes.Web.Components.Counter
 @using TourOfHeroes.Web.Components.Heroes
