--- a/src/TourOfHeroes.Web/Components/Heroes/HeroComponent.razor
+++ b/src/TourOfHeroes.Web/Components/Heroes/HeroComponent.razor
@@ -1,12 +1,12 @@
 @using BlazorState;
-@using TourOfHeroes.Web.Components.Heroes.State;
+@using TourOfHeroes.Data
 
 @inherits BlazorStateComponent
 
 <h2>My Heroes</h2>
 
 <EditForm Model="@hero" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator />
+    <FluentValidator />
     <ValidationSummary />
 
     <InputText id="name" @bind-Value="@hero.Name" />
