Put page title in top row

--- a/src/TourOfHeroes.Web/Shared/MainLayout.razor
+++ b/src/TourOfHeroes.Web/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/en-us/aspnet/" target="_blank">About</a>
+        Tour of Heroes
     </div>
 
     <div class="content px-4">
