Move the hero component into the components project

--- a/src/TourOfHeroes.Components/Heroes/HeroComponent.razor
+++ b/src/TourOfHeroes.Components/Heroes/HeroComponent.razor
@@ -1,7 +1,7 @@
 @using BlazorState;
 @using TourOfHeroes.Data
-@using TourOfHeroes.Web.Components.Heroes.State
-@using TourOfHeroes.Web.Components.Heroes.Validation
+@using TourOfHeroes.Components.Heroes.State
+@using TourOfHeroes.Components.Heroes.Validation
 
 @inherits BlazorStateComponent
 
