Add home nav link

--- a/src/TourOfHeroes.Web/Shared/MainLayout.razor
+++ b/src/TourOfHeroes.Web/Shared/MainLayout.razor
@@ -2,7 +2,9 @@
 
 <div class="main">
     <div class="top-row px-4">
-        Tour of Heroes
+        <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+            <span class="oi oi-home" aria-hidden="true"></span> Tour of Heroes
+        </NavLink>
     </div>
 
     <div class="content px-4">
