Add hero detail as a separate component

--- a/src/TourOfHeroes.Components/Heroes/HeroesComponent.razor
+++ b/src/TourOfHeroes.Components/Heroes/HeroesComponent.razor
@@ -17,7 +17,7 @@
                     <InputText id="name" @bind-Value="@_hero.Name" class="form-control" type="text" placeholder="Hero name" />
                 </div>
                 <button type="submit" class="btn btn-primary mb-2">Add</button>
-                <div >
+                <div>
                     <ValidationSummary />
                 </div>
             </EditForm>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="card-columns">
-        @foreach (var hero in _heroState.Heroes)
+        @foreach (var hero in _heroesState.Heroes)
         {
             <div class="card">
                 <div class="card-body">
@@ -34,13 +34,13 @@
                 </div>
                 <div class="card-footer text-right">
                     <button class="btn btn-sm btn-link" @onclick="@(() => Delete(hero))">Delete</button>
-                    <button type="button" class="btn btn-sm btn-dark">Edit</button>
+                    <button type="button" class="btn btn-sm btn-dark" @onclick="@(() => Edit(hero.Id))">Edit</button>
                 </div>
             </div>
         }
     </div>
 
-    @if (_heroState.Heroes.Any() == false)
+    @if (_heroesState.Heroes.Any() == false)
     {
         <div class="alert alert-info" role="alert">
             <strong>Oh no!</strong> It looks like you don't have any heroes 😕
