--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -8,3 +8,4 @@
 @using TourOfHeroes.Web.Shared
 @using TourOfHeroes.Components
 @using TourOfHeroes.Components.Heroes
+@using TourOfHeroes.Components.HeroDetail
