--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.JSInterop
 @using TourOfHeroes.Web
 @using TourOfHeroes.Web.Shared
-@using TourOfHeroes.Components
-@using TourOfHeroes.Components.Heroes
-@using TourOfHeroes.Components.HeroDetail
+@using Microsoft.AspNetCore.Components.Forms
+@using TourOfHeroes.Web.Validation
+@using TourOfHeroes.Web.Shared.Components
