Add missing XML comments

--- a/src/TourOfHeroes.Web/Pages/Heroes/Containers/HeroDetails.razor
+++ b/src/TourOfHeroes.Web/Pages/Heroes/Containers/HeroDetails.razor
@@ -23,7 +23,7 @@
                 <div class="form-group mx-sm-3 mb-2">     
                     <FluentValidator TValidator="HeroValidation" />
                     <label for="name">Name</label>
-                    <InputText id="name" @bind-Value="@_hero.Name" class="form-control" type="text" placeholder="@_heroesState.Hero.Name" />
+                    <InputText id="name" @bind-Value="@_hero.Name" class="form-control" type="text" placeholder="@HeroesState.Hero.Name" />
                 </div>
                 <div>
                     <ValidationSummary />
