--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -5,7 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using TourOfHeroes.Web
-@using TourOfHeroes.Web.Shared
+@using TourOfHeroes.Web.Common
 @using Microsoft.AspNetCore.Components.Forms
 @using TourOfHeroes.Web.Validation
-@using TourOfHeroes.Web.Shared.Components
+@using TourOfHeroes.Web.Common.Components
