--- a/src/TourOfHeroes.Web/Pages/Heroes/Containers/HeroDetails.razor
+++ b/src/TourOfHeroes.Web/Pages/Heroes/Containers/HeroDetails.razor
@@ -19,11 +19,11 @@
         
         <div class="card">
             <div class="card-body">
-            <EditForm Model="@Hero" OnValidSubmit="@Modify" id="modify">
+            <EditForm Model="@_hero" OnValidSubmit="@Modify" id="modify">
                 <div class="form-group mx-sm-3 mb-2">     
                     <FluentValidator TValidator="HeroValidationCollection" />
                     <label for="name">Name</label>
-                    <InputText id="name" @bind-Value="@Hero.Name" class="form-control" type="text" placeholder="@HeroesState.Hero.Name" />
+                    <InputText id="name" @bind-Value="@_hero.Name" class="form-control" type="text" placeholder="@HeroesState.Hero.Name" />
                 </div>
                 <div>
                     <ValidationSummary />
