Split Details into its own page and reorganise the folder structure

--- a/src/TourOfHeroes.Web/Pages/Heroes/Containers/Heroes.razor
+++ b/src/TourOfHeroes.Web/Pages/Heroes/Containers/Heroes.razor
@@ -1,5 +1,5 @@
 @page "/heroes"
-@using TourOfHeroes.Web.Pages.Heroes.Validation
+@using TourOfHeroes.Web.Common.Models.Validation
 @inherits HeroesBase
 
 <div class="container">
