--- a/src/TourOfHeroes.Web/Pages/Details/Containers/Details.razor
+++ b/src/TourOfHeroes.Web/Pages/Details/Containers/Details.razor
@@ -1,5 +1,5 @@
-@page "/heroes/{HeroId:int}"
-@using TourOfHeroes.Web.Pages.Heroes.Validation
+@page "/details/{HeroId:int}"
+@using TourOfHeroes.Web.Common.Models.Validation
 @inherits HeroDetailsBase
 
 <div class="container">
@@ -23,7 +23,7 @@
                 <div class="form-group mx-sm-3 mb-2">     
                     <FluentValidator TValidator="HeroValidationCollection" />
                     <label for="name">Name</label>
-                    <InputText id="name" @bind-Value="@_hero.Name" class="form-control" type="text" placeholder="@HeroesState.Hero.Name" />
+                    <InputText id="name" @bind-Value="@_hero.Name" class="form-control" type="text" placeholder="@DetailsState.Hero.Name" />
                 </div>
                 <div>
                     <ValidationSummary />
