--- a/src/TourOfHeroes.Web/Pages/_Host.cshtml
+++ b/src/TourOfHeroes.Web/Pages/_Host.cshtml
@@ -10,6 +10,7 @@
     <title>Tour of Heroes</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -18,5 +19,6 @@
     </app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script>
 </body>
 </html>
