--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using TourOfHeroes.Web.Validation
 @using TourOfHeroes.Web.Common.Components
+@using Blazored.Typeahead
+@using TourOfHeroes.Web.Common.Containers.Search
