Basic implementation of what a typeahead search would look like

--- a/src/TourOfHeroes.Web/Common/Containers/Search/Search.razor
+++ b/src/TourOfHeroes.Web/Common/Containers/Search/Search.razor
@@ -1,10 +1,33 @@
 @inherits SearchBase
 
-<BlazoredTypeahead SearchMethod="SearchHeroes" @bind-Value="_selectedHero">
-    <SelectedTemplate>
-        @context.Name
-    </SelectedTemplate>
-    <ResultTemplate>
-        @context
-    </ResultTemplate>
-</BlazoredTypeahead>
+<input 
+    class="form-control" 
+    type="text"
+    @bind-value="SearchText"
+    @bind-value:event="oninput"
+    @onkeyup="SearchHeroes"
+    @onblur="ResetControl"
+    autocomplete="off" 
+    placeholder="Search"/>
+
+@if (SearchState.Results.Any())
+{
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            @foreach (var item in SearchState.Results)
+            {
+                <li class="list-group-item">
+                    @item.Name
+                </li>
+            }
+        </ul>
+    </div>
+}
+@if (SearchState.NoResults)
+{
+    <div class="card">
+        <li class="list-group-item">
+            No Results!
+        </li>
+    </div>
+}
