--- a/src/TourOfHeroes.Web/Pages/Index.razor
+++ b/src/TourOfHeroes.Web/Pages/Index.razor
@@ -1,3 +1,6 @@
 ﻿@page "/"
 
-<NavLink href="/heroes">Heroes</NavLink>
+<div class="container">
+    <h3>Hero search</h3>
+    <Search></Search>
+</div>
