--- a/src/TourOfHeroes.Web/Common/Components/MainLayout.razor
+++ b/src/TourOfHeroes.Web/Common/Components/MainLayout.razor
@@ -1,23 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="main">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5">
-    <a class="navbar-brand" href="#">Tour of Heroes</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <NavLink class="nav-link" href="/">Dashboard</NavLink>
-            </li>
-            <li class="nav-item">
-                <NavLink class="nav-link" href="/heroes">Heroes</NavLink>
-            </li>
-        </ul>
-    </div>
-    </nav>
-
+    <NavBar />
     <div class="content px-4">
         @Body
     </div>
