--- a/src/TourOfHeroes.Web/Common/Containers/Search/Search.razor
+++ b/src/TourOfHeroes.Web/Common/Containers/Search/Search.razor
@@ -3,7 +3,7 @@
 <input 
     class="form-control" 
     type="text"
-    @bind-value="SearchText"
+    @bind-value="searchText"
     @bind-value:event="oninput"
     @onkeyup="SearchHeroes"
     @onblur="ResetControl"
