--- a/src/TourOfHeroes.Web/Pages/Details.razor
+++ b/src/TourOfHeroes.Web/Pages/Details.razor
@@ -13,7 +13,7 @@
     {
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Edit hero</h1>
+                <h1 class="display-4">@DetailsState.Hero.Name Details</h1>
             </div>
         </div>
         
