--- a/src/TourOfHeroes.Web/Pages/Heroes.razor
+++ b/src/TourOfHeroes.Web/Pages/Heroes.razor
@@ -9,6 +9,7 @@
         </div>
     </div>
 
+    <h5>Add a Hero</h5>
     <div class="card hero-add-form">
         <div class="card-body">
             <EditForm class="form-inline" Model="@_hero" OnValidSubmit="@Create">
