--- a/src/TourOfHeroes.Web/Pages/Index.razor
+++ b/src/TourOfHeroes.Web/Pages/Index.razor
@@ -1,6 +1,11 @@
 ﻿@page "/"
 
 <div class="container">
-    <h3>Hero search</h3>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">My Dashboard</h1>
+        </div>
+    </div>
+
     <Search />
 </div>
