--- a/src/TourOfHeroes.Web/Common/Components/NavBar.razor
+++ b/src/TourOfHeroes.Web/Common/Components/NavBar.razor
@@ -1,13 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light pl-5">
-    <a class="navbar-brand" href="#">Tour of Heroes</a>
-    <div>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <NavLink class="nav-link" href="/">Dashboard</NavLink>
-            </li>
-            <li class="nav-item">
-                <NavLink class="nav-link" href="/heroes">Heroes</NavLink>
-            </li>
-        </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <NavLink class="navbar-brand" href="/">Tour of Heroes</NavLink>
+  <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="@NavMenuCss" id="navbarNav" @onclick="ToggleNavMenu">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <NavLink class="nav-link" href="/dashboard">Dashboard</NavLink>
+        </li>
+        <li class="nav-item">
+            <NavLink class="nav-link" href="/heroes">Heroes</NavLink>
+        </li>
+    </ul>
+  </div>
 </nav>
+
+@code {
+    bool collapseNavMenu = true;
+
+    string NavMenuCss => collapseNavMenu ? "navbar-collapse collapse" : "navbar-collapse collapse show";
+
+    void ToggleNavMenu()
+    {
+        collapseNavMenu = !collapseNavMenu;
+    }
+}
