--- a/src/TourOfHeroes.Web/Pages/Details.razor
+++ b/src/TourOfHeroes.Web/Pages/Details.razor
@@ -13,7 +13,10 @@
     {
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">@DetailsState.Hero.Name Details</h1>
+                <div class="d-flex justify-content-between align-items-center">
+                        <h1 class="display-4">@DetailsState.Hero.Name Details</h1>
+                        <img src="@DetailsState.Hero.Picture" alt="@DetailsState.Hero.Name" class="rounded-circle hero-details-img">
+                </div>
             </div>
         </div>
         
