--- a/src/TourOfHeroes.Web/wwwroot/css/site.css
+++ b/src/TourOfHeroes.Web/wwwroot/css/site.css
@@ -14,6 +14,17 @@ a, .btn-link {
   border-color: #1861ac;
 }
 
+.hero-card-img {
+    height: 180px;
+    width: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.hero-details-img {
+    height:120px
+}
+
 app {
     position: relative;
     display: flex;
@@ -93,6 +104,10 @@ app {
 
 @media (max-width: 767.98px) {
     .main .top-row {
+        display: none;
+    }
+
+    .hero-details-img {
         display: none;
     }
 }
