--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -10,3 +10,4 @@
 @using TourOfHeroes.Web.Validation
 @using TourOfHeroes.Web.Common.Components
 @using TourOfHeroes.Web.Common.Containers.Search
+@using TourOfHeroes.Web.Common.Containers.TopHeroes
