--- a/src/TourOfHeroes.Web/Pages/Index.razor
+++ b/src/TourOfHeroes.Web/Pages/Index.razor
@@ -4,12 +4,21 @@
 <div class="container">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">My Dashboard</h1>
+            <h1 class="display-4">Top Heroes</h1>
         </div>
     </div>
 
-    
-    <TopHeroes />
+    <div class="mb-3 mt-3">
+        <TopHeroes />
+    </div>
 
-    <Search />
+    <div class="card">
+        <div class="card-header">
+            Find your hero
+        </div>
+        <div class="card-body">
+            <Search />
+        </div>
+    </div>
+
 </div>
