--- a/src/TourOfHeroes.Web/_Imports.razor
+++ b/src/TourOfHeroes.Web/_Imports.razor
@@ -11,3 +11,4 @@
 @using TourOfHeroes.Web.Common.Components
 @using TourOfHeroes.Web.Common.Containers.Search
 @using TourOfHeroes.Web.Common.Containers.TopHeroes
+@using Blazored.Typeahead
