--- a/src/TourOfHeroes.Web/Common/Containers/Search/Search.razor
+++ b/src/TourOfHeroes.Web/Common/Containers/Search/Search.razor
@@ -3,7 +3,7 @@
 <BlazoredTypeahead SearchMethod="SearchHeroes"
                    @bind-Value="SelectedHero"
                    ShowDropDownOnFocus="true"
-                   placeholder="Search by first name...">
+                   placeholder="Search by name...">
     <SelectedTemplate Context="hero">
         @hero.Name
     </SelectedTemplate>
