Add GitHub link

--- a/src/TourOfHeroes.Web/Common/Components/NavBar.razor
+++ b/src/TourOfHeroes.Web/Common/Components/NavBar.razor
@@ -11,6 +11,9 @@
         <li class="nav-item">
             <NavLink class="nav-link" href="/heroes">Heroes</NavLink>
         </li>
+        <li class="nav-item">
+            <NavLink class="nav-link" href="https://github.com/georgemathieson/blazor-tour-of-heroes">GitHub</NavLink>
+        </li>
     </ul>
   </div>
 </nav>
